[workspace]
members = ["xtask"]

[package]
name = "caniuse-rs"
version = "0.1.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-events = "0.1.2"
gloo-history = "0.1.4"
gloo-timers = "0.2.6"
gloo-utils = "0.1.6"
once_cell = "1.18.0"
wasm-bindgen = "0.2.87"
xilem_core = { git = "https://github.com/Philipp-M/xilem", branch = "xilem_html-dom-interfaces" }
xilem_html = { git = "https://github.com/Philipp-M/xilem", branch = "xilem_html-dom-interfaces" }

# fixup gloo-history's serde feature set
# https://github.com/rustwasm/gloo/pull/357
serde = { version = "1.0.164", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "DomStringMap",
    "Element",
    "Location",
    "HtmlElement",
    "Storage",
    "Window",
]

[build-dependencies]
anyhow = "1.0.71"
fs-err = "2.9.0"
proc-macro2 = "1.0.60"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1"
tera = { version = "1.19.0", default-features = false }
toml = { version = "0.7.4", default-features = false, features = ["parse"] }
quote = "1.0.28"

[profile.release]
opt-level = "s"
lto = true
