[workspace]
members = ["xtask"]

[package]
name = "caniuse-rs"
version = "0.1.0"
authors = ["Jonas Platte <jplatte@posteo.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-events = "0.2.0"
gloo-timers = "0.3.0"
gloo-utils = "0.2.0"
once_cell = "1.18.0"
wasm-bindgen = "0.2.87"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "DomStringMap",
    "Element",
    "Location",
    "HtmlElement",
    "Storage",
    "Window",
]

[build-dependencies]
anyhow = "1.0.71"
fs-err = "2.9.0"
proc-macro2 = "1.0.60"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1"
tera = { version = "1.19.0", default-features = false }
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
quote = "1.0.28"

[profile.release]
opt-level = "s"
lto = true
