[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
hyper = { version = "0.14.26", features = ["http1", "http2", "server", "tcp"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", default-features = false, features = ["make"] }
tower-http = { version = "0.4.0", features = ["fs"] }
xshell = "0.1.17"
