[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
hyper-util = { version = "0.1.2", features = ["http1", "http2", "server-auto", "service", "tokio"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.0", features = ["fs"] }
xshell = "0.1.17"
